Fix CheckBox wrapping.

--- a/webapp/css/FormEngine.css
+++ b/webapp/css/FormEngine.css
@@ -1,3 +1,3 @@
-.form-engine {
+.form-engine, .form-engine div {
   max-width: 600px;
 }
